<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8F0"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="UnknownId">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clearBTN0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:backgroundTint="#92140C"
                android:drawableTint="#FFFFFF"
                android:foregroundTint="#92140C"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parenthesisBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="parBTN"
                android:text="@string/parenthesis"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exponentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="expBTN"
                android:text="@string/exponent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="threeBTN"
                android:text="@string/three" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dotBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="decimalBTN"
                android:text="@string/dot"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/circle"
                android:onClick="equalBTN"

                android:text="@string/equals"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:allowUndo="false"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/backspaceBTN"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:onClick="backspaceBTN"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backspace"
        android:contentDescription="Image" />


</androidx.constraintlayout.widget.ConstraintLayout>